se agrego entity framework, arregle el login y el registro, agregue libreria de popup

--- a/Films/appsettings.json
+++ b/Films/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=46.183.117.154,54321; Database=0Films;User ID=sa;Password=Sql#123456789;trustServerCertificate=true"
+  },
+
+  "CloudinarySettings": {
+    "CloudName": "duc5qq3mn",
+    "ApiKey": "521671873335659",
+    "ApiSecret": "gfhxMpGg5r-FWSFnQdSCMBbDeso"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
