--- a/Films/Films.csproj
+++ b/Films/Films.csproj
@@ -25,4 +25,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="Views\Account\Profile.cshtml" />
+  </ItemGroup>
+
 </Project>
